<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical" >

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:contentDescription="@string/TODO"
    android:scaleType="centerCrop"
    android:src="@drawable/onboarding_bg_end" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:contentDescription="@string/TODO"
    android:gravity="bottom"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
      android:id="@+id/btnCreate"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="#FBAB00"
      android:minHeight="48dip"
      android:paddingTop="8dp"
      android:paddingBottom="8dp"
      android:text="@string/createWallet"
      android:textAllCaps="false"
      android:textColor="#5D4037"
      app:cornerRadius="8dp" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/btnImport"
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/importWallet"
      android:textAllCaps="false"
      android:textColor="#FBAB00"
      android:layout_marginBottom="@dimen/upsize_padding"
      app:backgroundTint="@android:color/transparent"
      app:cornerRadius="8dp"
      app:strokeColor="#FBAB00" />

  </LinearLayout>

</FrameLayout>
